fix spacing of footer from bottom and from app.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -10,15 +10,18 @@ html
 body
   display: flex
   flex-direction: column
+  min-height: 100vh
 
 #app
 	flex: 1 0 auto
+	padding-top: 120px
 
 footer
 	flex-shrink: 0
 	margin: auto
 	font-size: 12px
 	color: #8FBCD6
+	padding: 30px 0px 15px 0px
 
 	a
 		color: #8FBCD6
@@ -27,8 +30,6 @@ footer
 
 html, body
 	background: $darkblue
-	padding-top: 60px
-	padding-bottom: 40px
 
 h1
 	font-weight: 300
